--- a/app/(pages)/(hackers)/_components/IndexHero/IndexHero.module.scss
+++ b/app/(pages)/(hackers)/_components/IndexHero/IndexHero.module.scss
@@ -30,16 +30,17 @@
     width: 100%;
     // position: absolute;
     // bottom: 0;
+    margin-top: -5%;
     transform: translateY(42%);
 }
 
-.bunny {
-    // position: absolute;
-    // bottom: 0;
-    // left: 50%;
-    transform: translate(200%, 270%);
-    width: 20%;
-}
+// .bunny {
+//     // position: absolute;
+//     // bottom: 0;
+//     // left: 50%;
+//     transform: translate(200%, 270%);
+//     width: 20%;
+// }
 
 .small_left_cloud {
     position: absolute;
