--- a/app/(pages)/(hackers)/_components/IndexHero/IndexHeroContent.module.scss
+++ b/app/(pages)/(hackers)/_components/IndexHero/IndexHeroContent.module.scss
@@ -5,7 +5,7 @@
     // position: absolute;
     position: relative;
     z-index: 1000000;
-    padding: 7.5%;
+    padding: 7.5% 7.5% 0% 7.5%;
     // left: 120px;
     // right: 120px;
     top: 4%;
